knexsol/knexsol.v0.1.1.max.css
/* ... */
footer .footer-inner {
    padding: 0;
    width: 100%;
    min-width: 100%
}

.widget {
    margin: 0
}

.post-share-buttons {
    padding: 5px;
    float: right
}

.share-button {
    width: 40px;
    height: 40px;
    background: url(https://4.bp.blogspot.com/-_5vbLpSUZes/WxGZxTUdnAI/AAAAAAAABYw/N3400nHOKyoP3iPzkEeDPezP8BXdgBU7wCLcBGAs/s1600/social-sharing-sprite-red-240x120.png) left no-repeat!important;
    margin-left: 5px
}

.sb-email {
    background-position: 0 0!important
}

a:hover.sb-email {
    background-position: 0 -40px!important
}

.sb-blog {
    background-position: -40px 0!important
}

a:hover.sb-blog {
    background-position: -40px -40px!important
}

.sb-twitter {
    background-position: -80px 0!important
}

a:hover.sb-twitter {
    background-position: -80px -40px!important
}

.sb-facebook {
    background-position: -120px 0!important
}

a:hover.sb-facebook {
    background-position: -120px -40px!important
}

.sb-pinterest {
    background-position: -200px 0!important
}

a:hover.sb-pinterest {
    background-position: -200px -40px!important
}

.google-plus-share-container {
    padding-top: 9px;
    margin-left: 9px;
    margin-right: 10px;
    transform: scale(1.5, 2)
}

.post-footer {
    margin-top: 50px
}

.main.section {
    margin: 0
}

.post-body {
    font-size: 16px;
    margin-top: 70px
}

#contact-page #blog-pager,
#contact-page .blog-feeds,
#contact-page .post-title,
#exam-page #blog-pager,
#exam-page .blog-feeds,
#home-page #blog-pager,
#home-page .blog-feeds,
#home-page .post-title {
    display: none!important
}

#home-page .flatten-ul {
    padding: 0 15px;
    max-height: 300px;
    overflow: auto;
    list-style: none
}

#home-page .flatten-ul li {
    height: 150px;
    text-align: center;
    padding-top: 40px
}

#home-page .flatten-ul li .icon {
    font-size: 50px
}

#home-page .flatten-ul li .text-icon {
    font-size: 40px;
    font-style: normal;
    font-weight: 700
}

#home-page .bx-accordion .acc-unit {
    opacity: .9
}

.header-title {
    font-size: 21px;
    margin-top: 15px
}

#home-page .header-title {
    border-radius: 4px;
    color: #fff;
    background: rgba(0, 125, 255, .7);
    font-size: 30px
}

#home-page .header-title .central-box {
    max-width: 900px;
    margin: 0 auto
}

.section-3 {
    background: #fff
}

.header2 {
    font-size: 25px;
    margin: 20px 0;
    background: rgba(0, 125, 255, .7);
    color: #fff;
    padding: 10px 15px;
    border-radius: 6px
}

.distributed-icons .icon-container {
    text-align: center;
    padding: 20px 0;
    position: relative;
    overflow: hidden;
    border-radius: 4px;
    cursor: pointer
}

.distributed-icons .icon-container .hover-over {
    display: none;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: #000;
    background: rgba(0, 0, 0, .9);
    color: #fff;
    padding: 10px 15px;
    font-size: 20px;
    text-align: justify
}

.distributed-icons .icon-container .hover-over a {
    color: #ff0
}

.distributed-icons .icon-container:hover .hover-over {
    display: block
}

.distributed-icons .icon-container .icon {
    font-size: 60px;
    height: 130px;
    width: 130px;
    color: #fff;
    background: #007dff;
    border-radius: 50%;
    padding-top: 35px;
    margin-bottom: 15px
}

.distributed-icons .icon-container .icon.il {
    background: #8b008b
}

.distributed-icons .icon-container .icon.ee {
    background: navy
}

.distributed-icons .icon-container .icon.brain {
    background: #ff0;
    color: #00f
}

.distributed-icons .icon-container .icon.ce {
    background: #ff4500
}

.distributed-icons .icon-container .caption {
    font-size: 18px
}

#exam-page .post-footer {
    margin-top: 0;
    position: fixed;
    bottom: 20px;
    right: 10px
}

#exam-page .post-title {
    text-align: center;
    text-transform: uppercase;
    margin-top: 30px!important
}

#exam-page,
#exam-page .post-body {
    margin-top: 0
}

.fitb-input {
    width: 120px;
    display: inline-block;
    margin: 0 7px;
    border: none;
    outline: 0;
    box-shadow: none;
    border-bottom: 1px solid #000;
    border-radius: 0
}

.qa-panel {
    margin-top: 30px
}

.qa-panel .panel-heading,
.qa-panel .panel-heading .panel-title,
.qa-panel .panel-heading .panel-title pre {
    background-color: #fff;
    border: none;
    border-radius: 0
}

.qa-panel .panel-heading .panel-title.question {
    white-space: pre
}

.qa-panel .options-container .option {
    font-weight: 400
}

.checkcontainer {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 17px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none
}

#timeup-mask,
.checkmark,
.checkmark:after,
.radiobtn,
.radiobtn:after {
    position: absolute
}

.checkcontainer input[type=radio],
.checkcontainer input[type=checkbox] {
    position: absolute;
    opacity: 0;
    cursor: pointer
}

.checkmark {
    top: 8px;
    left: 5px;
    border-radius: 4px;
    height: 25px;
    width: 25px;
    background-color: #eee
}

.checkcontainer:hover input~.checkmark {
    background-color: #ccc
}

.checkcontainer input:checked~.checkmark {
    background-color: #000
}

.checkmark:after {
    display: none
}

.checkcontainer input:checked~.checkmark:after {
    display: block
}

.checkcontainer .checkmark:after {
    left: 10px;
    top: 6px;
    width: 7px;
    height: 12px;
    border: solid #fff;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg)
}

.radiobtn {
    top: 8px;
    left: 5px;
    height: 25px;
    width: 25px;
    background-color: #eee;
    border-radius: 50%
}

.checkcontainer:hover input~.radiobtn {
    background-color: #ccc
}

.checkcontainer input:checked~.radiobtn {
    background-color: #000
}

.radiobtn:after {
    display: none
}
/* ... */

